Some Final Fixes

--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -13,12 +13,12 @@
     <div class="row text-center">
       <article class="col-12 col-md-4 col-lg-4 col-xl-4 tm-article py-3">
         <i class="fa-solid fa-download fa-6x pb-3"></i>
-        <h2 class="tm-color-primary tm-article-title-1" style="font-size: 25px;">1. Get the Exam Tool</h2>
+        <h2 class="tm-color-primary tm-article-title-1" style="font-size: 25px;">1. Get the Exam Renderer</h2>
         <p style="font-size: 16px;">In order to start configuring your own examination<br>
                                     you need our build tool. You can find the library<br>
                                     with everything you will ever need through the link<br>
                                     below. Simply import the DLL file into your project.</p>
-        <a [href]="exameeToolURL" download target="_blank" class="tm-color-primary tm-font-semibold">ExameeTool.dll</a>
+        <a [href]="exameeRendererURL" download target="_blank" class="tm-color-primary tm-font-semibold">ExameeRenderer.dll</a>
       </article>
       <article class="col-12 col-md-4 col-lg-4 col-xl-4 tm-article py-3">
         <i class="fa-solid fa-gears fa-6x pb-3"></i>
