--- a/Client/src/app/member/member-exam-item/member-exam-item.component.html
+++ b/Client/src/app/member/member-exam-item/member-exam-item.component.html
@@ -1,53 +1,3 @@
-<!-- <div class="card mb-4 p-2" style="height: 100%; background-color: rgb(255, 246, 231);" *ngIf="exam">
-    <i class="fa-solid fa-file-word fa-6x"></i>
-    <div class="card-body p-2">
-        <h2 class="card-title text-center mb-1">{{exam.examName}}</h2>
-        <ng-container *ngIf="!process">
-            <form [formGroup]="genForm" id="msform" autocomplete="off">
-                <div class="row">
-                    <div class="col-6">
-                        <label for="copies" class="form-label">Copies</label>
-                        <app-text-input [formControl]="$any(genForm.controls['copies'])"
-                                        [label]="'Copies'"
-                                        [type]="'text'"></app-text-input>
-                    </div>
-                    <div class="col-6">
-                        <label for="questions" class="form-label">Questions</label>
-                        <app-text-input [formControl]="$any(genForm.controls['questions'])"
-                                        [label]="'Questions'"
-                                        [type]="'text'"></app-text-input>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <button mat-raised-button
-                                style="background-color: rgb(255, 209, 145); margin-top: 10px;"
-                                [disabled]="!genForm.valid"
-                                (click)="generateExams()">Generate Exams</button>
-                    </div>
-                    <div class="col-6">
-                        <button mat-raised-button
-                                style="background-color: rgb(255, 209, 145); margin-top: 10px;"
-                                (click)="deleteExam()"><i class="fa-solid fa-trash-can fa-2x"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </ng-container>
-        <ng-container *ngIf="process">
-            <div class="pt-4">
-                <button mat-raised-button
-                        style="background-color: rgb(255, 209, 145);">
-                        <a [href]="downloadUrl"
-                           download
-                           class="tm-color-primary tm-font-semibold"
-                           (click)="processEnded()">Download</a>
-                </button>
-            </div>
-        </ng-container>
-    </div>
-</div> -->
-
 <div class="card" *ngIf="exam">
     <form [formGroup]="genForm" id="msform" autocomplete="off">
         <div class="card-body">
@@ -56,16 +6,13 @@
             <hr>
             <ng-container *ngIf="!process">     <!-- Before Generation -->
                 <div class="row">
+                    <div class="col-3"></div>
                     <div class="col-6">
                         <app-text-input [formControl]="$any(genForm.controls['copies'])"
                                         [label]="'Copies'"
                                         [type]="'text'"></app-text-input>
                     </div>
-                    <div class="col-6">
-                        <app-text-input [formControl]="$any(genForm.controls['questions'])"
-                                        [label]="'Q\'s No'"
-                                        [type]="'text'"></app-text-input>
-                    </div>
+                    <div class="col-3"></div>
                 </div>
                 <hr>
                 <div class="row">
