--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="hero-image d-flex flex-column align-items-center justify-content-center">
   <h1 class="hero-title">Examee</h1>
   <br><br><br><br>
-  <p class="hero-subtitle">Simple Exam Describer</p>
+  <p class="hero-subtitle">Simple Exam Generator</p>
 </div>
 
 <div class="content">
